# vic-mpc

./: .gitignore  CMakeLists.txt  build.sh
humanoid_nmpc/humanoid_centroidal_mpc/: CMakeLists.txt
humanoid_nmpc/humanoid_centroidal_mpc/exe/: centroidalModelDemo.cpp
humanoid_nmpc/humanoid_common_mpc/: CMakeLists.txt
humanoid_nmpc/humanoid_common_mpc/exe/: gaitScheduleDemo.cpp  swingPlannerDemo.cpp
humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/common/: ModelSettings.h  MpcRobotModelBase.h  Types.h
humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/contact/: ContactCenterPoint.h  ContactPolygon.h  ContactRectangle.h
humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/pinocchio_model/: DynamicsHelperFunctions.h  PinocchioInterface.h  createPinocchioModel.h  pinocchioUtils.h
humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/swing_foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
humanoid_nmpc/humanoid_common_mpc/src/common/: ModelSettings.cpp
humanoid_nmpc/humanoid_common_mpc/src/contact/: ContactCenterPoint.cpp  ContactPolygon.cpp
humanoid_nmpc/humanoid_common_mpc/src/gait/: GaitSchedule.cpp
humanoid_nmpc/humanoid_common_mpc/src/pinocchio_model/: DynamicsHelperFunctions.cpp  PinocchioInterface.cpp  createPinocchioModel.cpp  pinocchioUtils.cpp
humanoid_nmpc/humanoid_common_mpc/src/swing_foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
humanoid_nmpc/remote_control/: CMakeLists.txt
humanoid_nmpc/remote_control/include/remote_control/: WalkingCommand.h  XboxControllerInterface.h
humanoid_nmpc/remote_control/src/: XboxControllerInterface.cpp
lib/ocs2/ocs2_centroidal_model/: CMakeLists.txt
lib/ocs2/ocs2_centroidal_model/include/ocs2_centroidal_model/: CentroidalModelInfo.h  CentroidalModelPinocchioMapping.h  FactoryFunctions.h  PinocchioCentroidalDynamics.h
lib/ocs2/ocs2_centroidal_model/src/: CentroidalModelInfo.cpp  CentroidalModelPinocchioMapping.cpp  FactoryFunctions.cpp  ModelHelperFunctions.cpp  PinocchioCentroidalDynamics.cpp
lib/ocs2/ocs2_core/: CMakeLists.txt
lib/ocs2/ocs2_core/include/ocs2_core/: PreComputation.h
lib/ocs2/ocs2_core/include/ocs2_core/misc/: LinearInterpolation.h
lib/ocs2/ocs2_core/include/ocs2_core/misc/implementation/: LinearInterpolation.h
lib/ocs2/ocs2_core/src/: Types.cpp
lib/ocs2/ocs2_core/src/reference/: ModeSchedule.cpp  TargetTrajectories.cpp
lib/ocs2/ocs2_pinocchio_interface/: CMakeLists.txt
lib/ocs2/ocs2_pinocchio_interface/include/ocs2_pinocchio_interface/: PinocchioInterface.h  PinocchioStateInputMapping.h
lib/ocs2/ocs2_pinocchio_interface/src/: PinocchioInterface.cpp
lib/ocs2/ocs2_robotic_tools/: CMakeLists.txt
lib/ocs2/ocs2_robotic_tools/include/ocs2_robotic_tools/common/: RotationTransforms.h
robot_runtime/mujoco_sim_interface/: CMakeLists.txt
robot_runtime/mujoco_sim_interface/exe/: mujocoSimNoTorques.cpp  mujocoSimPDStand.cpp  pinocchioCrossCheck.cpp
robot_runtime/mujoco_sim_interface/include/mujoco_sim_interface/: MujocoRenderer.h  MujocoSimInterface.h  MujocoUtils.h
robot_runtime/mujoco_sim_interface/src/: MujocoRenderer.cpp  MujocoSimInterface.cpp
robot_runtime/robot_core/: CMakeLists.txt
robot_runtime/robot_core/include/robot_core/: FPSTracker.h  ThreadSafe.h  Types.h
robot_runtime/robot_model/: CMakeLists.txt
robot_runtime/robot_model/include/robot_model/: ControllerBase.h  IDMapBase.h  JointIDMap.h  RobotDescription.h  RobotHWInterfaceBase.h  RobotJointAction.h  RobotState.h
robot_runtime/robot_model/src/: RobotDescription.cpp  RobotState.cpp
